FAQ section color contrast fix

--- a/scss/bootstrap/_accordion.scss
+++ b/scss/bootstrap/_accordion.scss
@@ -123,3 +123,24 @@
     }
   }
 }
+
+.bg-dark {
+  .accordion-body p {
+    opacity: 0.5;
+  }
+  .accordion-button:not(.collapsed) {
+    background-color: rgba(255,255,255,0.1) !important;
+    &::after {
+      filter: invert(1);
+    }
+  }
+  .accordion-button {
+    font-weight: bold;
+    
+    &.collapsed {
+      color: white;
+      background-color: none;
+    }
+    
+  }
+}
